# fil_courses

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docs.py  pyproject.toml
config/: __init__.py  settings.py  urls.py
fixtures/: courses.json  lessons.json
materials/: admin.py  models.py  paginators.py  serializer.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_alter_lesson_video.py  0004_course_price_course_stripe_product_id.py  0005_course_last_update.py
materials/tests/: fabrics.py  test__lesson.py  test__subscription.py  test_subscription.py
users/: admin.py  filters.py  models.py  permissions.py  serializer.py  stripe_service.py  tasks.py  urls.py  views.py
users/fixtures/: payments.json
users/migrations/: 0001_initial.py  0002_alter_user_managers_payment.py  0003_user_avatar_user_city_user_phone.py  0004_usersubscription.py  0005_payment_stripe_payment_url_payment_stripe_session_id.py  0006_alter_payment_amount_and_more.py  0007_alter_payment_stripe_payment_url_and_more.py  0008_alter_payment_stripe_payment_url.py  0009_payment_stripe_payment_status.py  0010_alter_payment_stripe_payment_status.py
