[tool.poetry]
name = "fil-courses"
version = "0.1.0"
description = ""
authors = [" annavaleriev <filenko.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
django-filter = "^24.3"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
requests = "^2.32.3"
stripe = "^10.12.0"
coreapi = "^2.3.3"
drf-spectacular = "^0.27.2"
celery = "^5.4.0"
redis = "^5.1.0"
eventlet = "^0.37.0"
django-celery-results = "^2.5.1"
django-celery-beat = "^2.7.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.8.0"
coverage = "^7.6.1"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
